[package]
name = "mousqlite_db_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio-rusqlite = {version = "0.6.0"}
tokio = {version = "1.0.0", features = ["full"]}
anyhow = "1.0.98"
mousqlite_types = { path = "../mousqlite_types"}
pest = "2.8.0"
pest_derive = "2.8.0"
poem ="3.1.10"
poem-openapi = { version = "5", features = ["swagger-ui"]}
database_helpers = {path="../database_helpers"}